Bug 167573 - Selecting object from Navigator and Delete key and object is not refreshed
Summary: Selecting object from Navigator and Delete key and object is not refreshed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.2.5.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2025-07-18 11:25 UTC by grofaty
Modified: 2025-10-17 23:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample.odg (10.73 KB, application/octet-stream)
2025-07-18 11:26 UTC, grofaty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grofaty 2025-07-18 11:25:49 UTC
Description:
Problem 1: After selecting object inside main Draw window and Delete and object is not deleted.

Problem 2: After clicking on "Page 2", click on object from Navigator and Delete and whole page is deleted. Expected only selected object from Navigator to be deleted.


Steps to Reproduce:
1. Open Draw.
2. View | Pages to display Pages side bar at left side of window.
3. View | Sidebar to display rigth side sidebar. Click on Navigator.
4. In main Draw window click on text_1 object to select it. Blue rectangle appears with small white squares at angles.
5. Observe: Look to Navigator and you can see there is "Shape 2 (Text Frame 'text_1')" text that is currently selected (blue background).
6. Press Delete button to delete text_1 object. If we look to the Navigator "Shape 2 (Text Frame 'text_1')" is as expected gone.
7. Now click directly in Navigators inside Page 1 at object "Shape 2 (Text Frame 'text 2')" and this selection get selected (blue background). You can also notice object "text_2" inside main Draw window is also selected as expected.
8. Press Delete button. You can see "text_2" in main Draw window has disappeared, but an issue: "Shape 2 (Text Frame 'text_2')" is still displayed.
9. It looks like this is some refresh problem. On left side inside Pages sidebar click on page 2 and then click back to page 1.
10. Observe: In Navigator inside Page 1 object "Shape 2 (Text Frame 'text 2')" not disappeared.
11. Inside Navigator click on "Shape 2 (Text Frame 'text_3')" and press Delete button. New issue appears, even bigger one. The whole "Page 1" was deleted.
12. Click Undo button from toolbar to get back deleted page.
13. Now click on "text_3" on main Draw window. Inside Navigator click on "Shape 3 (Text Frame 'text_4')" and press Delete button. Object "text_4" is successfully deleted.

Actual Results:
(See description above)

Expected Results:
(See description above)


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: sl-SI (en_SI); UI: en-GB
Calc: CL threaded
Comment 1 grofaty 2025-07-18 11:26:36 UTC
Created attachment 201874 [details]
sample.odg
Comment 2 m_a_riosv 2025-07-18 15:44:42 UTC
Repro
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 49279f6a01c4f07b723072c068a9c1eab5b7f292
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Jim Raykowski 2025-10-15 16:24:42 UTC
For me, the patch made for bug 157118 resolves "Problem 1: Selecting object from Navigator and Delete key and object is not refreshed"

Related:
In recent builds I noticed that sometimes an object deleted using the Navigator isn't removed from the drawing view until it is scrolled out of the drawing view or until a different page is selected and then the page the object was deleted from is selected again. The object is removed from the model. The Pages view rendering of the page window that objects are removed from always seems to update the change as expected.
Comment 4 Commit Notification 2025-10-17 19:50:29 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f504b90b046be0a4d8ba703f093cb68cc657b03f

tdf#167573 sd_navigator: fix deleting an object deletes the whole page

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Jim Raykowski 2025-10-17 23:54:32 UTC
Setting this ticket to Resolved Fixed, please let me know if I've missed something.

A separate ticket has been filed for the related bug mentioned in comment 3:
Bug 168928 - Draw/Impress object is not removed from the view after being deleted using the Navigator