tdf#167573 sd_navigator: fix deleting an object deletes the whole page

This patch uses a trick from commit
f3c68cdf8f6a0273c62b493552f78af0138a44e8

"An additional trick is to make sure that the current shell is the draw
shell (and not the slide sorter) after navigation, so follow-up
operations work with the selected object and not with the whole slide."

Change-Id: I0d9a7ef0b532abc8cbec286f4b9b401e8acb699c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192007
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>